--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>Hello world from highly available group of ec2 instances4444</h1>
+<h1>Hello world from highly available group of ec2 instances</h1>
